<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowDetailMovie.view.DetailMovieView"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_detail_movie_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:padding="18dp"
            app:cardCornerRadius="14dp"
            app:cardElevation="2dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:id="@+id/relative_layout_detail_movie_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="6dp">

                <TextView
                    android:id="@+id/text_view_movie_title_detail_movie_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:gravity="center_horizontal|center_vertical"
                    android:text="@string/string_text_view_movie_title_detail_movie_view"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text_size_movie_title_detail_movie_view"
                    android:textStyle="bold">
                </TextView>
                <TextView
                    android:id="@+id/text_view_overview_movie_detail_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/string_text_view_overview_movie_detail_view"
                    android:textSize="@dimen/text_size_text_view_overview_description_movie_detail_view"
                    android:textStyle="bold"
                    tools:viewBindingIgnore="true"
                    android:layout_below="@id/text_view_movie_title_detail_movie_view"></TextView>

                <TextView
                    android:id="@+id/text_view_overview_description_movie_detail_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_view_overview_movie_detail_view"
                    android:fontFamily="sans-serif"
                    android:text="@string/string_text_view_overview_description_movie_detail_view"
                    android:textSize="@dimen/text_size_text_view_overview_description_movie_detail_view">
                </TextView>

                <TextView
                    android:id="@+id/text_view_genres_details_movie_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_genre_detail_view_movie"
                    android:textSize="@dimen/text_size_text_view_overview_description_movie_detail_view"
                    android:textStyle="bold"
                    android:layout_below="@id/text_view_overview_description_movie_detail_view"
                    tools:viewBindingIgnore="true"></TextView>

                <TextView
                    android:id="@+id/text_view_genres_description_movie_detail_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_view_genres_details_movie_view"
                    android:text="@string/string_text_view_overview_description_movie_detail_view"
                    android:textSize="@dimen/text_size_text_view_overview_description_movie_detail_view"></TextView>

                <TextView
                    android:id="@+id/text_view_release_details_movie_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_view_genres_description_movie_detail_view"
                    android:text="@string/text_view_release_detail_view_movie"
                    android:textSize="@dimen/text_size_text_view_overview_description_movie_detail_view"
                    android:textStyle="bold"
                    tools:viewBindingIgnore="true"></TextView>

                <TextView
                    android:id="@+id/text_view_release_description_movie_detail_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text_view_release_details_movie_view"
                    android:text="@string/string_text_view_overview_description_movie_detail_view"
                    android:textSize="@dimen/text_size_text_view_overview_description_movie_detail_view"></TextView>
                <TextView
                    android:id="@+id/text_view_rate_movie_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_view_rate_detail_view_movie"
                    android:textSize="@dimen/text_size_text_view_overview_description_movie_detail_view"
                    android:textStyle="bold"
                    tools:viewBindingIgnore="true"
                    android:layout_below="@id/text_view_release_description_movie_detail_view"></TextView>


                <TextView
                    android:id="@+id/text_view_rate_movie_details_movie_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/text_view_rate_movie_view"
                    android:layout_below="@id/text_view_release_description_movie_detail_view"
                    android:text="@string/text_view_rate_movie_details_movie_view"
                    android:textSize="@dimen/text_size_text_view_overview_movie_detail_view">
                </TextView>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>